themes/enertec/assets/styles/enertec.scss
/* ... */
@media(max-width: 768px) {
    * {
        text-align: center;
        text-align-last: center;
    }

    .l__col-6 {
        width: 100%;
    }

    .l__col-4 {
        width: 50%;
    }

    .l__col-2-4 {
        width: 33.33%;
    }

    .c-contact .c-nav__link, .c-footer .c-nav__link{
        img{
            display: block;
            margin: 0 auto 10px auto !important;
        }
    }

    .c-title{
        &.c-title--decoration{
            &:before{
               margin-right: auto;
               margin-left: auto;
            }
        }
    }

    .c-explanation__step:nth-child(even){
        margin-left: 0 !important;

    }

    .c-section--shape-bg{
        margin-top: -60px;
    }

    .c-section--bg-shape-inverted{
        margin-bottom: -90px;

        .c-benefits .l__col-2-4{
            margin-bottom: 20px;
        }
    }
    
    .c-services .l__col-4:not(:last-of-type){
        margin-bottom: 40px;
    }
}

@media(max-width: 650px){
    .c__mobile-full{
        display: block;
    }

    .c-signature{
        margin-top: 10px;
    }
}

@media(max-width: 572px){
    .c-header__top, .c-header .c__button{
        display: none;
    } 

    .c-section--video-bg{
        margin-top: 112px;
    }

    .c-header:not(.sticky) .c-header__bottom .c-nav__link{
        margin-left: 0;
    }
}

@media(max-width: 478px){
    .l__col-4{
        width: 100%;
    }

    .l__col-2-4{
        width: 50%
    }
}

